--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -3,3 +3,5 @@ jakarta.validation.constraints.NotNull.message=must not be blank
 jakarta.validation.constraints.Size.message=must not exceed {1} characters
 typeMismatch.java.math.BigDecimal=Enter price only
 jakarta.validation.constraints.Digits.message=Correct price format
+
+EMSG101=File name must be less than {1} characters.
