add file size validator

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -4,4 +4,5 @@ jakarta.validation.constraints.Size.message=must not exceed {1} characters
 typeMismatch.java.math.BigDecimal=Enter price only
 jakarta.validation.constraints.Digits.message=Correct price format
 
-EMSG101=File name must be less than {1} characters.
+EMSG101=File name must be less than 15 characters.
+EMSG103=File size must be less than 800KB.
