--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -5,4 +5,6 @@ typeMismatch.java.math.BigDecimal=Enter price only
 jakarta.validation.constraints.Digits.message=Correct price format
 
 EMSG101=File name must be less than 15 characters.
+EMSG102=Only JPEG or PNG are accepted.
 EMSG103=File size must be less than 800KB.
+
