add success message after registering prod

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -8,3 +8,5 @@ EMSG101=File name must be less than 15 characters.
 EMSG102=Only jpeg or png are accepted.
 EMSG103=File size must be less than 800KB.
 
+REGSUC=The product has been registered.
+
