--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -9,4 +9,5 @@ EMSG102=Only jpeg or png are accepted.
 EMSG103=File size must be less than 800KB.
 
 REGSUC=The product has been registered.
+UPDSUC=The product has been updated.
 
