--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -10,4 +10,5 @@ EMSG103=File size must be less than 800KB.
 
 REGSUC=The product has been registered.
 UPDSUC=The product has been updated.
+DELSUC=The product has been deleted.
 
