add success & error msgs after updating & deleting

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -11,4 +11,6 @@ EMSG103=File size must be less than 800KB.
 REGSUC=The product has been registered.
 UPDSUC=The product has been updated.
 DELSUC=The product has been deleted.
+UPDERR=Error!  The product wasn't updated.
+DELERR=Error!  The product wasn't deleted.
 
