--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,6 +1,9 @@
 # set validation messages
 jakarta.validation.constraints.NotNull.message=must not be blank
-jakarta.validation.constraints.Size.message=must not exceed {1} characters
+Size.product.name=must not exceed {1} characters
+Size.product.manufacturer=must not exceed {1} characters
+Size.product.description=must not exceed {1} characters
+
 typeMismatch.java.math.BigDecimal=Enter price only
 jakarta.validation.constraints.Digits.message=Correct price format
 
